--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -27,6 +27,7 @@ jobs:
             ITK_BUILD_DIR: ../ITK-build
             ELX_SOURCE_DIR: ../Elastix-source
             ELX_BUILD_DIR: ../Elastix-build
+            random_nr: 1
           - os: windows-2019
             c-compiler: "cl.exe"
             cxx-compiler: "cl.exe"
@@ -38,6 +39,7 @@ jobs:
             ITK_BUILD_DIR: ../ITK-build
             ELX_SOURCE_DIR: ../Elastix-source
             ELX_BUILD_DIR: ../Elastix-build
+            random_nr: 1
           - os: macos-10.15
             c-compiler: "clang"
             cxx-compiler: "clang++"
@@ -50,6 +52,7 @@ jobs:
             ITK_BUILD_DIR: ../ITK-build
             ELX_SOURCE_DIR: ../Elastix-source
             ELX_BUILD_DIR: ../Elastix-build
+            random_nr: 1
 
 
     steps:
@@ -61,7 +64,7 @@ jobs:
         path: |
           ITK-build
           ITK-source
-        key: ${{ matrix.itk-git-tag }}-${{ matrix.os }}
+        key: ${{ matrix.itk-git-tag }}-${{ matrix.os }}-${{ matrix.cmake-build-type }}-${{ matrix.random_nr }}
 
     - uses: actions/cache@v2
       id: cache_elastix
